syntax = "proto3";

//lint:file-ignore SA1019 Generated deprecated import

package message;
option go_package = ".;message";

message AppendEntriesRequest {
    int32 term = 1;
    bytes leaderID = 2;
    int32 prevLogIndex = 3;
    int32 prevLogTerm = 4;
    repeated LogData Entries = 5;
    int32 leaderCommit = 6;
}

message LogData {
    int32 term = 1;
    string data = 2;
    reserved 3; // will be used for intermediate representation when switching from SQL to AST
}

message AppendEntriesResponse {
    int32 term = 1;
    bool success = 2;
}